--- a/packages/sewing-kit-plugin-quilt/package.json
+++ b/packages/sewing-kit-plugin-quilt/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@shopify/sewing-kit-plugin-quilt",
   "version": "0.0.1-import-latest-external-quilt-plugin-beta.1",
+  "description": "Quilt plugins for sewing-kit",
   "publishConfig": {
     "access": "public",
     "@shopify:registry": "https://registry.npmjs.org"
@@ -18,6 +19,24 @@
     },
     "./": "./"
   },
+  "files": [
+    "build/*",
+    "!*.tsbuildinfo",
+    "index.js",
+    "index.mjs",
+    "index.esnext",
+    "index.d.ts"
+  ],
+  "author": "Shopify Inc.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Shopify/quilt.git",
+    "directory": "packages/sewing-kit-plugin-quilt"
+  },
+  "bugs": {
+    "url": "https://github.com/Shopify/quilt/issues"
+  },
+  "homepage": "https://github.com/Shopify/quilt/blob/main/packages/sewing-kit-plugin-quilt/README.md",
   "sideEffects": false,
   "devDependencies": {
     "@types/webpack-virtual-modules": "^0.1.0"
@@ -30,7 +49,6 @@
     "@sewing-kit/plugin-jest": "^0.1.26",
     "@sewing-kit/plugin-package-flexible-outputs": "^0.1.27",
     "@sewing-kit/plugin-react": "^0.1.27",
-    "@sewing-kit/plugin-service-base": "^0.1.23",
     "@sewing-kit/plugin-stylelint": "^0.1.10",
     "@sewing-kit/plugin-typescript": "^0.1.27",
     "@sewing-kit/plugin-web-app-base": "^0.1.24",
@@ -39,8 +57,6 @@
     "@shopify/webpack-asset-metadata-plugin": "^2.0.3",
     "@types/execa": "^0.9.0",
     "browserslist": "^4.16.0",
-    "browserslist-useragent-regexp": "^2.0.0",
-    "compression-webpack-plugin": "^6.0.0",
     "fs-extra": "^9.0.0",
     "webpack-virtual-modules": "^0.4.0"
   }
