--- a/package.json
+++ b/package.json
@@ -30,9 +30,15 @@
   },
   "homepage": "https://github.com/shopify/quilt#readme",
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ],
+    "nohoist": [
+      "**/webpack",
+      "**/@types/webpack"
+    ]
+  },
   "devDependencies": {
     "@apollo/react-common": "^3.1.3",
     "@apollo/react-hooks": "^3.1.3",
