--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
       "packages/*"
     ],
     "nohoist": [
-      "**/webpack",
-      "**/@types/webpack"
+      "**/packages/graphql-mini-transforms/**/webpack",
+      "**/packages/graphql-mini-transforms/**/@types/webpack"
     ]
   },
   "devDependencies": {
