--- a/packages/graphql-mini-transforms/package.json
+++ b/packages/graphql-mini-transforms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-mini-transforms",
-  "version": "3.0.1",
+  "version": "3.0.1-jest-27-beta.1",
   "license": "MIT",
   "description": "Transformers for importing .graphql files in various build tools.",
   "main": "index.js",
