--- a/packages/magic-entries-webpack-plugin/package.json
+++ b/packages/magic-entries-webpack-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/magic-entries-webpack-plugin",
-  "version": "1.2.0",
+  "version": "1.2.0-webpack-5-beta.3",
   "license": "MIT",
   "description": "A webpack plugin that automatically sets up entrypoints from filename conventions",
   "main": "index.js",
@@ -39,10 +39,10 @@
     "index.d.ts"
   ],
   "devDependencies": {
+    "@types/webpack": "^4.25.1",
     "@types/webpack-virtual-modules": "^0.1.0",
-    "webpack-virtual-modules": "^0.4.3",
     "webpack": "^4.25.1",
-    "@types/webpack": "^4.25.1"
+    "webpack-virtual-modules": "^0.4.3"
   },
   "module": "index.mjs",
   "esnext": "index.esnext",
