--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -49,7 +49,7 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "saddle-up": "^0.5.1",
-    "webpack": "^4.25.1"
+    "webpack": ">=5.38.0"
   },
   "peerDependencies": {
     "cross-fetch": ">=3.0.0",
