--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -50,7 +50,7 @@
     "react-dom": "17.0.2",
     "saddle-up": "^0.5.1",
     "setimmediate": "^1.0.5",
-    "webpack": "^4.25.1"
+    "webpack": ">=5.38.0"
   },
   "peerDependencies": {
     "cross-fetch": ">=3.0.0",
