--- a/packages/magic-entries-webpack-plugin/package.json
+++ b/packages/magic-entries-webpack-plugin/package.json
@@ -40,6 +40,7 @@
   ],
   "devDependencies": {
     "@types/webpack-virtual-modules": "^0.1.0",
+    "setimmediate": "^1.0.5",
     "webpack-virtual-modules": "^0.4.3"
   },
   "module": "index.mjs",
