--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -49,6 +49,7 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "saddle-up": "^0.5.1",
+    "setimmediate": "^1.0.5",
     "webpack": "^4.25.1"
   },
   "peerDependencies": {
