--- a/package.json
+++ b/package.json
@@ -29,14 +29,9 @@
   },
   "homepage": "https://github.com/shopify/quilt#readme",
   "private": true,
-  "workspaces": {
-    "packages": [
-      "packages/*"
-    ],
-    "nohoist": [
-      "**/@jest/transform"
-    ]
-  },
+  "workspaces":[
+    "packages/*"
+  ],
   "devDependencies": {
     "@apollo/react-common": "^3.1.3",
     "@apollo/react-hooks": "^3.1.3",
