--- a/packages/graphql-mini-transforms/package.json
+++ b/packages/graphql-mini-transforms/package.json
@@ -30,9 +30,10 @@
     "graphql-typed": "^1.0.0"
   },
   "devDependencies": {
-    "@types/fs-extra": "^9.0.11",
     "@types/common-tags": "^1.8.0",
-    "common-tags": "^1.8.0"
+    "@types/loader-utils": "^1.1.3",
+    "common-tags": "^1.8.0",
+    "webpack": "^5.40.0"
   },
   "peerDependencies": {
     "webpack": ">=5.38.0"
