--- a/packages/graphql-mini-transforms/package.json
+++ b/packages/graphql-mini-transforms/package.json
@@ -32,7 +32,8 @@
   "devDependencies": {
     "@types/common-tags": "^1.8.0",
     "@types/fs-extra": "^9.0.11",
-    "common-tags": "^1.8.0"
+    "common-tags": "^1.8.0",
+    "webpack": "^5.40.0"
   },
   "peerDependencies": {
     "webpack": ">=5.38.0"
