--- a/packages/react-compose/package.json
+++ b/packages/react-compose/package.json
@@ -27,7 +27,7 @@
     "hoist-non-react-statics": "^3.0.1"
   },
   "peerDependencies": {
-    "react": "^16.3.2"
+    "react": ">=16.8.0 <18.0.0"
   },
   "sideEffects": false,
   "files": [
