--- a/packages/react-cookie/package.json
+++ b/packages/react-cookie/package.json
@@ -29,8 +29,8 @@
     "cookie": "^0.4.0"
   },
   "peerDependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react": ">=16.8.0 <18.0.0",
+    "react-dom": ">=16.8.0 <18.0.0"
   },
   "files": [
     "build/*",
