--- a/packages/react-form-state/package.json
+++ b/packages/react-form-state/package.json
@@ -27,7 +27,7 @@
     "fast-deep-equal": "^3.1.3"
   },
   "peerDependencies": {
-    "react": "^16.4.1"
+    "react": ">=16.8.0 <18.0.0"
   },
   "devDependencies": {
     "@shopify/useful-types": "^3.0.1",
