--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -31,8 +31,8 @@
     "serialize-javascript": "^3.0.0"
   },
   "peerDependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react": ">=16.8.0 <18.0.0",
+    "react-dom": ">=16.8.0 <18.0.0"
   },
   "devDependencies": {
     "@shopify/react-testing": "^3.1.0",
