--- a/packages/react-idle/package.json
+++ b/packages/react-idle/package.json
@@ -28,7 +28,7 @@
     "@shopify/useful-types": "^3.0.1"
   },
   "peerDependencies": {
-    "react": "^16.8.0"
+    "react": ">=16.8.0 <18.0.0"
   },
   "files": [
     "build/*",
