--- a/packages/react-import-remote/package.json
+++ b/packages/react-import-remote/package.json
@@ -30,7 +30,7 @@
     "@shopify/useful-types": "^3.0.1"
   },
   "peerDependencies": {
-    "react": "^16.4.1"
+    "react": ">=16.8.0 <18.0.0"
   },
   "sideEffects": false,
   "files": [
