--- a/packages/react-tracking-pixel/package.json
+++ b/packages/react-tracking-pixel/package.json
@@ -26,7 +26,7 @@
     "@shopify/react-html": "^11.0.2"
   },
   "peerDependencies": {
-    "react": "^16.4.1"
+    "react": ">=16.8.0 <18.0.0"
   },
   "files": [
     "build/*",
