--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -32,9 +32,9 @@
     "@types/babel__core": ">=7.0.0",
     "@types/babel__traverse": ">=7.0.0",
     "@types/koa-mount": "^3.0.1",
-    "@types/webpack": "^4.0.0",
-    "@types/webpack-virtual-modules": "^0.1.0",
-    "koa-mount": "^3.0.0"
+    "@types/webpack-virtual-modules": "^0.1.1",
+    "koa-mount": "^3.0.0",
+    "webpack": ">=5.38.0"
   },
   "files": [
     "build/*",
@@ -57,8 +57,7 @@
     "worker.d.ts"
   ],
   "optionalDependencies": {
-    "@babel/core": "^7.0.0",
-    "webpack": "^4.25.1"
+    "@babel/core": "^7.0.0"
   },
   "module": "index.mjs",
   "esnext": "index.esnext",
