--- a/packages/react-web-worker/package.json
+++ b/packages/react-web-worker/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "@shopify/react-hooks": "^2.1.0",
     "@shopify/useful-types": "^3.0.1",
-    "@shopify/web-worker": "^2.1.0"
+    "@shopify/web-worker": "2.1.0-webpack-5-beta.8"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <18.0.0",
