Fix typesVersions fields (#1985)
- Fix typo in polyfills typesVersions
- Add typesVersions to graphql-testing

--- a/packages/polyfills/package.json
+++ b/packages/polyfills/package.json
@@ -33,7 +33,7 @@
         "./build/ts/formdata.node.d.ts"
       ],
       "idle-callback.browser": [
-        "./build/ts/idle-callback.browser'.d.ts"
+        "./build/ts/idle-callback.browser.d.ts"
       ],
       "idle-callback.jest": [
         "./build/ts/idle-callback.jest.d.ts"
