--- a/packages/graphql-mini-transforms/package.json
+++ b/packages/graphql-mini-transforms/package.json
@@ -45,10 +45,15 @@
   "devDependencies": {
     "@types/common-tags": "^1.8.0",
     "common-tags": "^1.8.0",
-    "webpack": "^5.40.0"
+    "webpack": "^5.38.0"
   },
   "peerDependencies": {
-    "webpack": ">=5.38.0"
+    "webpack": "^5.38.0"
+  },
+  "peerDependenciesMeta": {
+    "webpack": {
+      "optional": true
+    }
   },
   "files": [
     "build/",
