--- a/packages/graphql-persisted/package.json
+++ b/packages/graphql-persisted/package.json
@@ -33,11 +33,11 @@
   },
   "dependencies": {
     "@types/koa": "^2.0.0",
-    "@types/koa-bodyparser": "*",
+    "@types/koa-bodyparser": "4.3.5",
     "@types/koa-compose": "*",
     "apollo-link": ">=1.0.0 <2.0.0",
-    "koa-bodyparser": ">=4.0.0 <5.0.0",
-    "koa-compose": ">=3.0.0 <4.0.0"
+    "koa-bodyparser": "^4.3.0",
+    "koa-compose": "^4.1.0"
   },
   "devDependencies": {
     "@shopify/sewing-kit-koa": "^6.4.5"
