--- a/packages/koa-shopify-webhooks/package.json
+++ b/packages/koa-shopify-webhooks/package.json
@@ -26,8 +26,8 @@
   "dependencies": {
     "@shopify/network": "^2.0.4",
     "@types/koa": "^2.0.0",
-    "koa-bodyparser": "^4.2.1",
-    "koa-compose": ">=3.0.0 <4.0.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-compose": "^4.1.0",
     "koa-mount": "^4.0.0",
     "safe-compare": "^1.1.3"
   },
