--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -41,8 +41,8 @@
     "@shopify/sewing-kit-koa": "^8.0.0",
     "@shopify/useful-types": "^3.0.5",
     "chalk": "^2.4.2",
-    "koa": "^2.5.0",
-    "koa-compose": ">=3.0.0 <4.0.0",
+    "koa": "^2.13.4",
+    "koa-compose": "^4.1.0",
     "koa-mount": "^4.0.0"
   },
   "devDependencies": {
