--- a/packages/sewing-kit-koa/package.json
+++ b/packages/sewing-kit-koa/package.json
@@ -25,13 +25,13 @@
   },
   "dependencies": {
     "@shopify/network": "^2.0.4",
-    "@types/koa-mount": "^4.0.0",
+    "@types/koa-mount": "^4.0.1",
     "@types/koa-static": "^4.0.0",
     "app-root-path": "^2.1.0",
     "browserslist-useragent": "^2.0.1",
     "fs-extra": "^9.1.0",
-    "koa": "^2.5.0",
-    "koa-compose": ">=3.0.0 <4.0.0",
+    "koa": "^2.13.4",
+    "koa-compose": "^4.1.0",
     "koa-mount": "^4.0.0",
     "koa-static": "^5.0.0",
     "node-gzip": "^1.1.2"
