--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -88,28 +88,5 @@
     "generate-index.esnext"
   ],
   "module": "index.mjs",
-  "esnext": "index.esnext",
-  "exports": {
-    "./": "./",
-    "./babel": {
-      "import": "./babel.mjs",
-      "require": "./babel.js",
-      "esnext": "./babel.esnext"
-    },
-    "./generate-dictionaries": {
-      "import": "./generate-dictionaries.mjs",
-      "require": "./generate-dictionaries.js",
-      "esnext": "./generate-dictionaries.esnext"
-    },
-    "./generate-index": {
-      "import": "./generate-index.mjs",
-      "require": "./generate-index.js",
-      "esnext": "./generate-index.esnext"
-    },
-    ".": {
-      "import": "./index.mjs",
-      "require": "./index.js",
-      "esnext": "./index.esnext"
-    }
-  }
+  "esnext": "index.esnext"
 }
