--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -88,5 +88,28 @@
     "generate-index.esnext"
   ],
   "module": "index.mjs",
-  "esnext": "index.esnext"
+  "esnext": "index.esnext",
+  "exports": {
+    "./": "./",
+    "./babel": {
+      "esnext": "./babel.esnext",
+      "import": "./babel.mjs",
+      "require": "./babel.js"
+    },
+    "./generate-dictionaries": {
+      "esnext": "./generate-dictionaries.esnext",
+      "import": "./generate-dictionaries.mjs",
+      "require": "./generate-dictionaries.js"
+    },
+    "./generate-index": {
+      "esnext": "./generate-index.esnext",
+      "import": "./generate-index.mjs",
+      "require": "./generate-index.js"
+    },
+    ".": {
+      "esnext": "./index.esnext",
+      "import": "./index.mjs",
+      "require": "./index.js"
+    }
+  }
 }
