--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "lerna": "^4.0.0",
     "plop": "^2.6.0",
     "prettier": "~2.0.4",
-    "puppeteer": "^10.4.0",
+    "puppeteer": "^13.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rimraf": "^2.6.2",
@@ -81,6 +81,7 @@
   "resolutions": {
     "@types/react": "17.0.13",
     "@types/react-dom": "17.0.8",
-    "get-port": "^5.1.0"
+    "get-port": "^5.1.0",
+    "cross-fetch": "3.1.5"
   }
 }
