use typescript native types
changelog

forgot this one

more

apply pr comments

Revert typescript-project-references.test.ts and apply proper fix

remove two more usages of FirstArgument and Arguments

revert ArgumentAtIndex changes

update changelog files

fix tests

Apply suggestions from code review

Apply suggestions from code review

--- a/packages/react-form-state/tsconfig.json
+++ b/packages/react-form-state/tsconfig.json
@@ -10,5 +10,5 @@
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ],
-  "references": [{"path": "../predicates"}, {"path": "../useful-types"}]
+  "references": [{"path": "../predicates"}]
 }
