--- a/shipit.yml
+++ b/shipit.yml
@@ -1,8 +1,8 @@
 ci:
   require:
     - node-tests (12.22)
-    - node-tests (14.x)
-    - node-tests (16.x)
+    - node-tests (14.18)
+    - node-tests (16.13)
 dependencies:
   post:
     - npm config set @shopify:registry https://registry.npmjs.org
