--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rimraf": "^2.6.2",
+    "tsd": "^0.19.1",
     "typescript": "^4.3.5",
     "yalc": "^1.0.0-pre.50"
   },
