--- a/packages/react-graphql-universal-provider/package.json
+++ b/packages/react-graphql-universal-provider/package.json
@@ -24,14 +24,11 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/react-graphql": "^7.1.24",
-    "@shopify/react-hooks": "^2.1.18",
-    "@shopify/react-html": "^11.1.20",
-    "@shopify/react-network": "^4.2.10",
-    "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
-    "apollo-client": ">=2.0.0 <3.0.0",
-    "apollo-link": ">=1.0.0 <2.0.0",
-    "apollo-link-context": ">=1.0.0 <2.0.0"
+    "@shopify/react-graphql": "^7.1.22",
+    "@shopify/react-hooks": "^2.1.16",
+    "@shopify/react-html": "^11.1.18",
+    "@shopify/react-network": "^4.2.8",
+    "@apollo/client": "^3.5.10"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <18.0.0"
