--- a/packages/graphql-persisted/package.json
+++ b/packages/graphql-persisted/package.json
@@ -32,10 +32,10 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@types/koa": "^2.0.0",
     "@types/koa-bodyparser": "*",
     "@types/koa-compose": "*",
-    "apollo-link": ">=1.0.0 <2.0.0",
     "koa-bodyparser": ">=4.0.0 <5.0.0",
     "koa-compose": ">=4.0.0 <5.0.0"
   },
