--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@shopify/loom-plugin-prettier": "^2.0.0",
     "@shopify/typescript-configs": "^5.0.0",
     "@types/faker": "^5.5.9",
-    "@types/react": "17.0.13",
+    "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
     "apollo-cache-inmemory": "^1.3.6",
     "apollo-client": "^2.3.8",
@@ -78,9 +78,6 @@
     "yalc": "^1.0.0-pre.50"
   },
   "resolutions": {
-    "@types/react": "17.0.13",
-    "@types/react-dom": "17.0.8",
-    "get-port": "^5.1.0",
     "cross-fetch": "3.1.5"
   }
 }
