--- a/packages/graphql-fixtures/package.json
+++ b/packages/graphql-fixtures/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-fixtures",
-  "version": "1.4.5",
+  "version": "1.4.5-apollo-3-beta.2",
   "license": "MIT",
   "description": "Utilities for generating fixture objects from GraphQL documents.",
   "main": "index.js",
@@ -28,7 +28,7 @@
     "@shopify/useful-types": "^4.0.2",
     "@types/faker": "^5.5.9",
     "graphql": ">=14.5.0 <16.0.0",
-    "graphql-tool-utilities": "^2.1.6"
+    "graphql-tool-utilities": "^2.1.6-apollo-3-beta.2"
   },
   "peerDependencies": {
     "graphql-typed": ">=0.6.1 <2.0.0"
