--- a/packages/graphql-tool-utilities/package.json
+++ b/packages/graphql-tool-utilities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-tool-utilities",
-  "version": "2.1.6",
+  "version": "2.1.6-apollo-3-beta.2",
   "license": "MIT",
   "description": "Common utilities for GraphQL developer tools",
   "main": "index.js",
