--- a/packages/mock-factory/package.json
+++ b/packages/mock-factory/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/mock-factory",
-  "version": "0.0.0",
+  "version": "0.0.0-mock-factory-beta.5",
   "license": "MIT",
   "description": "create typesafe mock data objects",
   "main": "index.js",
