--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -59,7 +59,8 @@
     "hoist-non-react-statics": "^3.0.1",
     "lodash.clonedeep": "^4.0.0",
     "lodash.merge": "^4.0.0",
-    "string-hash": "^1.1.3"
+    "string-hash": "^1.1.3",
+    "strip-json-comments": "^3.1.1"
   },
   "sideEffects": false,
   "peerDependencies": {
