--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "@shopify/loom-plugin-eslint": "^2.0.0",
     "@shopify/loom-plugin-prettier": "^2.0.0",
     "@shopify/typescript-configs": "^5.0.0",
-    "@types/react": "^17.0.13",
-    "@types/react-dom": "^17.0.8",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "apollo-cache-inmemory": "^1.3.6",
     "apollo-client": "^2.3.8",
     "babel-loader": "^8.0.6",
@@ -69,8 +69,8 @@
     "plop": "^2.6.0",
     "prettier": "~2.0.4",
     "puppeteer": "^13.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "rimraf": "^2.6.2",
     "tsd": "^0.19.1",
     "typescript": "^4.3.5",
