--- a/packages/graphql-mini-transforms/package.json
+++ b/packages/graphql-mini-transforms/package.json
@@ -37,7 +37,7 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@jest/transform": "^27.0.2",
+    "@jest/transform": ">= 27 <29",
     "fs-extra": "^9.1.0",
     "graphql": ">=14.5.0 <16.0.0",
     "graphql-typed": "^1.1.5"
