--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -17,7 +17,7 @@ jobs:
         # output to 14.x and 16.x, so for now lock to the last version in 14
         # and 16 before the ICU change.
         # Once we drop support for node 12 we can consider using 14.x and 16.x
-        node-version: ['12.22', '14.18', '16.13']
+        node-version: ['14.18', '16.13']
     timeout-minutes: 15
 
     steps:
